cc @matt revert "rename piwik -> Piwik cc @diosmosis", only rename 'piwik' not 'piwik.org'
This reverts commit a3d1561cf6b8c97a6010bcffdf94e8f92a23940a.

--- a/lang/en.json
+++ b/lang/en.json
@@ -402,7 +402,7 @@
         "ColumnCustomVariableName": "Custom Variable name",
         "ColumnCustomVariableValue": "Custom Variable value",
         "CustomVariables": "Custom Variables",
-        "CustomVariablesReportDocumentation": "This report contains information about your Custom Variables. Click on a variable name to see the distribution of the values. %s For more information about Custom Variables in general, read the %sCustom Variables documentation on Piwik.org%s",
+        "CustomVariablesReportDocumentation": "This report contains information about your Custom Variables. Click on a variable name to see the distribution of the values. %s For more information about Custom Variables in general, read the %sCustom Variables documentation on piwik.org%s",
         "PluginDescription": "Custom Variables are name,value pairs that you can set to a Visit using the Javascript API setVisitCustomVariables() function. Piwik will then report how many visits, pages, conversions for each of these custom names and values.",
         "ScopePage": "scope page",
         "ScopeVisit": "scope visit"
@@ -1243,7 +1243,7 @@
         "Advanced": "Advanced",
         "AnonymousAccess": "Anonymous access",
         "AnonymousTracking": "Anonymous tracking",
-        "AskForAnonymousTrackingPermission": "When enabled, Piwik Mobile will send anonymous usage data to Piwik.org. The intent is to use this data to help Piwik Mobile developers better understand how the app is used. Information sent is: menus and settings clicked on, OS name and version, any error displayed in Piwik Mobile. We will NOT track any of your analytics data. This anonymous data will never be made public. You can disable\/enable anonymous tracking in Settings at any time.",
+        "AskForAnonymousTrackingPermission": "When enabled, Piwik Mobile will send anonymous usage data to piwik.org. The intent is to use this data to help Piwik Mobile developers better understand how the app is used. Information sent is: menus and settings clicked on, OS name and version, any error displayed in Piwik Mobile. We will NOT track any of your analytics data. This anonymous data will never be made public. You can disable\/enable anonymous tracking in Settings at any time.",
         "ChooseHttpTimeout": "Choose HTTP timeout value",
         "ChooseMetric": "Choose Metric",
         "ChooseReport": "Choose a report",
@@ -1439,7 +1439,7 @@
         "AllReferrersReportDocumentation": "This report shows all your Referrers in one unified report, listing all Websites, Search keywords and Campaigns used by your visitors to find your website.",
         "Campaigns": "Campaigns",
         "CampaignsDocumentation": "Visitors that came to your website as the result of a campaign. %s See the %s report for more details.",
-        "CampaignsReportDocumentation": "This report shows which campaigns led visitors to your website. %s For more information about tracking campaigns, read the %scampaigns documentation on Piwik.org%s",
+        "CampaignsReportDocumentation": "This report shows which campaigns led visitors to your website. %s For more information about tracking campaigns, read the %scampaigns documentation on piwik.org%s",
         "ColumnCampaign": "Campaign",
         "ColumnSearchEngine": "Search Engine",
         "ColumnSocial": "Social network",
