--- a/lang/en.json
+++ b/lang/en.json
@@ -380,6 +380,7 @@
         "PluginDescription": "Piwik updating mechanism",
         "ReadyToGo": "Ready to go?",
         "TheFollowingPluginsWillBeUpgradedX": "The following plugins will be updated: %s.",
+        "TheFollowingDimensionsWillBeUpgradedX": "The following dimensions will be updated: %s.",
         "ThereIsNewPluginVersionAvailableForUpdate": "Some plugins you use have been updated on the Marketplace:",
         "ThereIsNewVersionAvailableForUpdate": "There is a new version of Piwik available for update",
         "TheUpgradeProcessMayFailExecuteCommand": "If you have a large Piwik database, updates might take too long to run in the browser. In this situation, you can execute the updates from your command line: %s",
