refs #5326 as mentioned in the ticket once we have simplified the reports we can simplify the widgets api even more which is done in this commit, it might be not perfect yet but again much better than before

--- a/lang/en.json
+++ b/lang/en.json
@@ -637,6 +637,7 @@
         "ExceptionUndeletableFile": "Unable to delete %s",
         "ExceptionUnreadableFileDisabledMethod": "The configuration file {%s} could not be read. Your host may have disabled %s.",
         "ExceptionReportNotFound": "The requested report does not exist.",
+        "ExceptionWidgetNotFound": "The requested widget does not exist.",
         "ExceptionReportNotEnabled": "The requested report is not enabled. This means usually either the plugin that defines the report is deactivated or you do not have enough permission to access this report.",
         "ExpandDataTableFooter": "Change the visualization or configure the report",
         "Export": "Export",
