language update  refs #3430

--- a/lang/da.json
+++ b/lang/da.json
@@ -1086,6 +1086,8 @@
         "PasswordDoNotMatch": "adgangskoder stemmer ikke overens",
         "PasswordRepeat": "Gentag adgangskode",
         "PercentDone": "%s %% udført",
+        "PiwikOrgNewsletter": "e-mail mig de vigtigste Piwik community opdateringer",
+        "PiwikProNewsletter": "Jeg er interesseret i %sPiwik PRO%s tjenester (ikke mere end 1 e-mail om måneden)",
         "PleaseFixTheFollowingErrors": "Ret følgende fejl",
         "PluginDescription": "Installation af Piwik. Installationen sker som regel kun én gang. Hvis konfigurationsfilen config\/config.inc.php slettes starter installationen igen.",
         "Requirements": "Piwik krav",
@@ -1136,6 +1138,7 @@
         "SystemCheckPdoAndMysqliHelp": "På en linux-server kan php kompileres med følgende valg: %1$sn i php.ini, tilføj følgende linjer: %2$s",
         "SystemCheckPhp": "PHP version",
         "SystemCheckPhpPdoAndMysqli": "Mere information på: %1$sPHP PDO%2$s og %3$sMYSQLI%4$s.",
+        "SystemCheckSessionAutostart": "For at forhindre nogle problemer, indstil følgende i php.ini filen: session.auto_start = 0",
         "SystemCheckSplHelp": "Konfigurer og genstart PHP med standard PHP Biblioteket (SPL) aktiveret (som standard).",
         "SystemCheckSummaryNoProblems": "Sådan! Der er ingen problemer med din Piwik opsætning. Giv dig selv et klap på skulderen.",
         "SystemCheckSummaryThereWereErrors": "Ups! Piwik har opdaget nogle %1$skritiske problemer%2$s med din Piwik opsætning. %3$sDisse problemer skal løses øjeblikkeligt.%4$s",
