--- a/lang/fr.json
+++ b/lang/fr.json
@@ -104,6 +104,7 @@
         "CustomLogoHelpText": "Vous pouvez personnaliser le logo Piwik qui sera affichée dans l'interface utilisateur et les rapports par courriel.",
         "DevelopmentProcess": "Bien que notre %sprocessus de développement%s inclue des milliers de tests automatisés, les béta testeurs jouent un rôle clef dans la réalisation de la \"politique zéro bug\" de Piwik.",
         "EmailServerSettings": "Paramètres du serveur mail",
+        "FaviconUpload": "Sélectionnez un favicon à télécharger",
         "ForBetaTestersOnly": "Pour les bêta testeurs uniquement",
         "ImageTracking": "Suivi par Image",
         "ImageTrackingIntro1": "Quand un visiteur désactive JavaScript, ou quand JavaScript ne peut être utilisé, vous pouvez utiliser le lien de suivi par image pour suivre les visiteurs.",
@@ -154,6 +155,7 @@
         "PiwikIsInstalledAt": "Piwik est installé à l'adresse",
         "PluginDescription": "Zone d'administration de Piwik.",
         "PluginSettingChangeNotAllowed": "Vous n'êtes pas autorisé(e) à modifier la valeur du paramètre \"%s\" du plugin \"%s\"",
+        "PluginSettingReadNotAllowed": "Vous n'êtes pas autorisé(e) à voir la valeur du paramètre \"%s\" dans le plugin \"%s\"",
         "PluginSettings": "Paramètres du composant",
         "PluginSettingsIntro": "Vous pouvez ici modifier les paramètres des composants tierce partie suivants :",
         "PluginSettingsValueNotAllowed": "La valeur pour le champ \"%s\" du composant \"%s\" n'est pas autorisée.",
@@ -446,17 +448,26 @@
     "Feedback": {
         "ContactThePiwikTeam": "Contactez l’Équipe Piwik!",
         "DoYouHaveBugReportOrFeatureRequest": "Avez-vous un bug à rapporter ou une fonctionnalité à demander?",
+        "GetInTouch": "Nous apprécions vos commentaires et lisons tous les messages. Peut-être voudriez vous nous informer d'une opportunité commerciale, employer un consultant, nous raconter un succès ou simplement dire bonjour!",
         "HowToCreateIssue": "Merci de lire la documentation sur la bonne manière d'écrire un %1$srapport de bug%2$s ou %3$sune demande de nouvelle fonctionnalité%4$s. Ensuite, %5$senregistrez-vous%6$s ou %7$sconnectez-vous%8$s sur notre gestionnaire d'incidents puis créez un %9$snouveau ticket%10$s.",
         "IWantTo": "Je veux:",
         "LearnWaysToParticipate": "Renseignez vous sur les manières dont vous pouvez %s participer%s",
         "ManuallySendEmailTo": "Merci d'envoyer manuellement votre message à",
         "PluginDescription": "Envoie vos retours à l’Équipe Piwik. Partagez vos idées et suggestions avec nous!",
+        "PrivacyClaim": "Piwik respecte votre %1$svie privée%2$s et vous donne un contrôle total sur vos données.",
+        "RateFeatureLeaveMessageDislike": "Nous sommes désolés de voir que vous n'aimez pas ça. N'hésitez pas à nous dire comme nous pouvons améliorer.",
+        "RateFeatureLeaveMessageLike": "Nous sommes heureux de savoir que vous l'aimez ! S'il vous plaît laissez-nous savoir ce que vous aimez le plus ou si vous avez une demande de fonctionnalité.",
         "RateFeatureSendFeedbackInformation": "Voter installation Piwik nous enverra (l'équipe Piwik) un e-mail (contenant votre adresse e-mail) afin que nous puissions entrer en contact avec vous si vous avez des questions.",
+        "RateFeatureThankYouTitle": "Merci d'avoir noté \"%s\" !",
+        "RateFeatureTitle": "Est-ce que vous aimez la fonctionnalité \"%s\" ? Notez la et laissez un commentaire",
         "SendFeedback": "Envoyer le retour",
         "SpecialRequest": "Avez-vous une demande spéciale pour l’Équipe Piwik?",
         "ThankYou": "Merci d'avoir aidé à améliorer Piwik!",
         "TopLinkTooltip": "Dites nous ce que vous en pensez, ou demandez un Support Professionnel.",
-        "VisitTheForums": "Visitez les %s Forums%s"
+        "ViewAnswersToFAQ": "Voir les réponses aux %squestions fréquemment posées%s",
+        "ViewUserGuides": "Apprenez comment configurer Piwik et comment analyser de manière efficaces vos données avec notre %1$sguide utilisateur%2$s",
+        "VisitTheForums": "Visitez les %s Forums%s",
+        "WantToThankConsiderDonating": "Vous pensez que Piwik est génial et voulez nous remercier?"
     },
     "General": {
         "AbandonedCarts": "Paniers abandonnés",
@@ -624,6 +635,7 @@
         "ExceptionUnableToStartSession": "Impossible de démarrer une session.",
         "ExceptionUndeletableFile": "Impossible de supprimer %s",
         "ExceptionUnreadableFileDisabledMethod": "Le fichier de configuration {%s} n'a pas pu être lu. votre hébergeur a probablement désactivé %s.",
+        "ExpandDataTableFooter": "Modifier la visualisation ou configurer le rapport",
         "Export": "Exporter",
         "ExportAsImage": "Exporter au format Image",
         "ExportThisReport": "Exporter ce jeu de données dans d'autres formats",
@@ -757,6 +769,7 @@
         "Password": "Mot de passe",
         "Period": "Période",
         "Piechart": "Camembert",
+        "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s est disponible. Veuillez informer %2$sl'administrateur Piwik%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "Piwik %1$s est maintenant disponible. %2$s Merci de mettre à jour!%3$s (voir %4$s les modifications%5$s).",
         "PleaseSpecifyValue": "Merci de spécifier une valeur pour %s",
         "PleaseUpdatePiwik": "Merci de mettre à jour Piwik",
@@ -998,11 +1011,24 @@
         "PluginDescription": "Génère de magnifiques graphiques en image PNG statique pour tous vos rapports Piwik."
     },
     "Insights": {
+        "ControlComparedToDescription": "Croissance comparée à",
+        "ControlFilterByDescription": "Tout afficher, seulement les déplacés, seulement nouveaux ou seulement disparus",
+        "DatePeriodCombinationNotSupported": "Il n'est pas possible de générer des indicateurs pour cette combinaison de date et de période.",
         "DayComparedToPreviousDay": "jour précédent",
         "DayComparedToPreviousWeek": "même jour de la semaine précédente",
         "DayComparedToPreviousYear": "même jour de l'année précédente",
+        "Filter": "Filtrer",
+        "FilterIncreaserAndDecreaser": "Augmentateur & réducteur",
+        "FilterOnlyDecreaser": "Réducteur uniquement",
+        "FilterOnlyDisappeared": "Disparus uniquement",
+        "FilterOnlyIncreaser": "Augmentateur uniquement",
+        "FilterOnlyMovers": "Déplaceurs uniquement",
+        "FilterOnlyNew": "Nouveaux uniquement",
+        "IgnoredChanges": "Les modifications affectant moins de %s ont été ignorées.",
         "MonthComparedToPreviousMonth": "mois précédent",
         "MonthComparedToPreviousYear": "même mois de l'année précédente",
+        "MoversAndShakersWidgetTitle": "Déplaceurs et Shakers",
+        "NoResultMatchesCriteria": "Aucune ligne ne correspond aux critères",
         "OverviewWidgetTitle": "Aperçu des idées",
         "WeekComparedToPreviousWeek": "semaine précédente",
         "WidgetCategory": "Idées",
