--- a/lang/ro.json
+++ b/lang/ro.json
@@ -155,6 +155,7 @@
         "PiwikIsInstalledAt": "Piwik este instalat în",
         "PluginDescription": "Zona de administrare Piwik.",
         "PluginSettingChangeNotAllowed": "Nu iti este permis sa schimbi valoarea setarii \"%s\" in plugin \"%s\"",
+        "PluginSettingReadNotAllowed": "Nu se poate citi valoare setării \"%s\" din modulul \"%s\"",
         "PluginSettings": "Setarile pluginului",
         "PluginSettingsIntro": "Aici poti schimba setarile pentru urmatoarele pluginuri terte (3rd party):",
         "PluginSettingsValueNotAllowed": "Valoarea pentru campul \"%s\" in plugin \"%s\" nu este permisa",
@@ -861,7 +862,7 @@
         "TransitionsRowActionTooltip": "Vezi ce au făcut vizitatorii până la şi după vizionarea acestei pagini",
         "TransitionsRowActionTooltipTitle": "Treceri Deschise",
         "TranslatorEmail": "astonsoftware@gmail.com, flo[at]inboxtranslation[dot]com",
-        "TranslatorName": "astonsoftware, <a href=\"http:\/\/inboxtranslations.com\">Inbox Translation<\/a>",
+        "TranslatorName": "astonsoftware, <a href=\"http:\/\/inboxtranslations.com\">Inbox Translation<\/a>, <a href=\"http:\/\/marcelbejgu.ro\">Marcel Bejgu<\/a>",
         "UniquePurchases": "Cumparaturi unice",
         "Unknown": "Necunoscut",
         "Upload": "Incarca",
@@ -1079,6 +1080,8 @@
         "PasswordDoNotMatch": "Parola nu se potriveste",
         "PasswordRepeat": "Parolă (repetă)",
         "PercentDone": "%s %% Done",
+        "PiwikOrgNewsletter": "trimite-mi email-uri cu noutăți importante legate de comunitatea Piwik",
+        "PiwikProNewsletter": "Sunt interesat(ă) de serviciile %sPiwik PRO%s (nu mai mult de 1 email pe lună)",
         "PleaseFixTheFollowingErrors": "Vă rugăm să reparati următoarele erori",
         "PluginDescription": "Procesul de instalare a Piwik.Instalarea se face de obicei o singură dată. În cazul în care fișierul de configurare de configurare\/config.inc.php este șters, instalarea va începe din nou.",
         "Requirements": "Piwik Cerințe",
@@ -1129,6 +1132,7 @@
         "SystemCheckPdoAndMysqliHelp": "Pe un server Linux, puteți compila php cu următoarele opțiuni: %1$s în php.ini dvs., adăugați următoarele linii: %2$s",
         "SystemCheckPhp": "PHP version",
         "SystemCheckPhpPdoAndMysqli": "Mai multe informatii pe:%1$sPHP PDO%2$s si %3$sMYSQLI%4$s.",
+        "SystemCheckSessionAutostart": "Pentru a evita unele probleme pune la începutul fișierului php.ini: session.auto_start=0",
         "SystemCheckSplHelp": "Aveți nevoie pentru a configura și reconstrui PHP cu PHP Biblioteca Standard (SPL) activata (implicit).",
         "SystemCheckSummaryNoProblems": "Huzzah! Nu există probleme cu configurarea Piwik. Dă-ți o palma pe spate.",
         "SystemCheckSummaryThereWereErrors": "Uh-oh! Piwik a detectat unele probleme %1$s critic %2$s cu configurarea Piwik. %3$s Aceste probleme ar trebui să fie fixate imediat.%4$s",
