--- a/lang/el.json
+++ b/lang/el.json
@@ -1084,6 +1084,8 @@
         "PasswordDoNotMatch": "ο κωδικός δεν ταιριάζει",
         "PasswordRepeat": "Επανάληψη κωδικού πρόσβασης",
         "PercentDone": "%s %% Ολοκληρώθηκε",
+        "PiwikOrgNewsletter": "στείλε μου e-mail για μεγάλες ενημερώσεις της κοινοτικής έκδοσης του Piwik",
+        "PiwikProNewsletter": "Ενδιαφέρομαι για υπηρεσίες του %sPiwik PRO%s (όχι περισσότερα από 1 e-mail το μήνα)",
         "PleaseFixTheFollowingErrors": "Διορθώστε τα ακόλουθα σφάλματα",
         "PluginDescription": "Διαδικασία εγκατάστασης του Piwik. Η Εγκατάσταση γίνεται συνήθως μόνο μια φορά. Αν το αρχείο ρυθμίσεων config\/config.inc.php έχει διαγραφεί, η εγκατάσταση θα ξεκινήσει από την αρχή.",
         "Requirements": "Απαιτήσεις Piwik",
@@ -1134,6 +1136,7 @@
         "SystemCheckPdoAndMysqliHelp": "Σε διακομιστή Linux μπορείτε να ρυθμίσετε την php με τις ακόλουθες επιλογές: %1$s στο αρχείο php.ini, προσθέστε τις ακόλουθες γραμμές: %2$s",
         "SystemCheckPhp": "Έκδοση PHP",
         "SystemCheckPhpPdoAndMysqli": "Περισσότερες πληροφορίες στο: %1$sPHP PDO%2$s και %3$sMYSQLI%4$s.",
+        "SystemCheckSessionAutostart": "Για την αποφυγή ορισμένων προβλημάτων, ορίστε την παρακάτω τιμή στο php.ini αρχείο: session.auto_start=0",
         "SystemCheckSplHelp": "Πρέπει να ρυθμίσετε και ξαναεγκαταστήσετε την PHP με τη Βασική Βιβλιοθήκη PHP (SPL) ενεργοποιήμένη (ως προεπιλογή).",
         "SystemCheckSummaryNoProblems": "Δεν υπάρχουν προβλήματα με την εγκατάσταση του Piwik. Όλα καλά!",
         "SystemCheckSummaryThereWereErrors": "Ώωχ, το Piwik εντόπισε %1$sκρίσιμα θέματα%2$s με την εγκατάσταση του Piwik. %3$sΑυτά τα θέματα πρέπει να διορθωθούν άμεσα.%4$s",
