--- a/lang/it.json
+++ b/lang/it.json
@@ -1084,6 +1084,8 @@
         "PasswordDoNotMatch": "Le Password non coincidono",
         "PasswordRepeat": "Password (ripeti)",
         "PercentDone": "%s %% Fatto",
+        "PiwikOrgNewsletter": "Inviami per email gli aggiornamenti importanti della comunità di Piwik",
+        "PiwikProNewsletter": "Sono interessato ai servizi di %sPiwik PRO%s (non più di 1 email al mese)",
         "PleaseFixTheFollowingErrors": "Per favore, risolvi i seguenti errori",
         "PluginDescription": "Processo di installazione di Piwik. L'installazione è di solito fatta una sola volta. Se il file di configurazione (config\/config.inc.php) viene cancellato, l'installazione partirà di nuovo.",
         "Requirements": "Requisiti di Piwik",
@@ -1134,6 +1136,7 @@
         "SystemCheckPdoAndMysqliHelp": "Su un server Linux puoi compilare PHP con le seguenti opzioni: %1$s Nel tuo php.ini, aggiungi le seguenti linee: %2$s",
         "SystemCheckPhp": "Versione PHP",
         "SystemCheckPhpPdoAndMysqli": "Maggiori informazioni a riguardo: %1$sPHP PDO%2$s e %3$sMYSQLI%4$s.",
+        "SystemCheckSessionAutostart": "Per prevenire alcuni problemi, imposta quanto segue nel tuo file php.ini: session.auto_start=0",
         "SystemCheckSplHelp": "Devi configurare e ricostruire il PHP con la libreria Standard PHP abilitata (di default).",
         "SystemCheckSummaryNoProblems": "Evviva! Non ci sono problemi con le impostazioni di Piwik. Datti una pacca sulla spalla.",
         "SystemCheckSummaryThereWereErrors": "Piwik ha rilevato alcuni %1$sproblemi critici%2$s con la configurazione di Piwik. %3$sQuesti problemi devono essere risolti immediatamente.%4$s",
