--- a/lang/nl.json
+++ b/lang/nl.json
@@ -103,6 +103,7 @@
         "CustomLogoHelpText": "U kunt het Piwik logo aanpassen dat wordt weergegeven in de gebruikersinterface en in de e-mail rapportages.",
         "DevelopmentProcess": "Hoewel ons %s ontwikkel process %s duizenden automatisch tests omvat, spelen Beta testers een belangrijke rol in het \"No bug beleid\" in Piwik.",
         "EmailServerSettings": "E-mail server instellingen",
+        "FaviconUpload": "Selecteer een favicon om up te loaden",
         "ForBetaTestersOnly": "Alleen voor beta testers",
         "ImageTracking": "Afbeelding tracking",
         "ImageTrackingIntro1": "Wanneer een bezoeker javaScript heeft uitgeschakeld, of wanneer JavaScript niet kan worden gebruikt, kun je een tracking afbeelding gebruiken om bezoekers te volgen.",
@@ -156,6 +157,7 @@
         "PluginSettingsIntro": "Hier kunt u instellingen aanpassen voor de volgende plugins van derden:",
         "PluginSettingsValueNotAllowed": "De waarde voor veld \"%s\" in plugin \"%s\" is niet toegestaan",
         "SendPluginUpdateCommunication": "Stuur mij een email melding als er een nieuwe plugin update is",
+        "SendPluginUpdateCommunicationHelp": "Een email wordt verstuurd naar de Super User wanneer er een nieuwe versie voor de plugin is.",
         "StableReleases": "Indien Piwik een essentieel onderdeel is van uw zaak, dan raaden wij aan om de laatste stabiele versie te draaien. Indien je de laatste beta gebruikt en je ontdekt bugs of hebt een suggestie, %skijk dan hier%s.",
         "TrackAGoal": "Hou een doel bij.",
         "TrackingCode": "Tracking code.",
@@ -285,6 +287,7 @@
         "PluginHomepage": "Plugins",
         "PluginKeywords": "Sleutelwoorden",
         "PluginNotCompatibleWith": "%1$s plugin is niet compatibel met %2$s.",
+        "PluginRequirement": "%1$s vereist %2$s.",
         "PluginsManagement": "Plugin manager",
         "PluginUpdateAvailable": "U gebruikt versie %s en een nieuwe versie %s is beschikbaar.",
         "PluginVersionInfo": "%1$s van %2$s",
@@ -339,9 +342,11 @@
         "ExceptionArchiveEmpty": "Leeg archief.",
         "ExceptionArchiveIncompatible": "Incompatibel archief: %s",
         "ExceptionArchiveIncomplete": "Archief is onvolledig. Sommige bestanden ontbreken (zoals %s)",
+        "FeedbackRequest": "Voel je vrij om je ideeën en suggesties te delen met het Piwik team:",
         "HelpMessageContent": "Controleer de %1$s Piwik FAQ %2$s waarin de meest voorkomende upgrade foutmeldingen worden uitgelegd. %3$s Vraag uw systeem beheerder - deze kan u wellicht helpen met deze fout die waarschijnlijk gerelateerd is aan de configuratie van uw webserver of MySQL-database.",
         "HelpMessageIntroductionWhenError": "Hierboven staat de foutmelding. Hierin zou de oorzaak naar voren moeten komen, mocht u desondanks nog vragen hebben:",
         "HelpMessageIntroductionWhenWarning": "De upgrade is voltooid, maar met fouten tijdens het proces. Lees de omschrijvingen hierboven voor meer informatie. Voor verdere hulp:",
+        "IncompatbilePluginsWillBeDisabledInfo": "Let op: sommige plugins zijn niet compitable met Piwik %s. Deze worden uitgeschakeld bij een upgrade.",
         "InstallingTheLatestVersion": "Bezig om de laatste versie te installeren",
         "MajorUpdateWarning1": "Dit is een ingrijpende update! Het zal langer dan normaal duren.",
         "MajorUpdateWarning2": "Het volgende advies vooral voor grote installaties bedoelt.",
