--- a/lang/en.json
+++ b/lang/en.json
@@ -1169,7 +1169,9 @@
         "WeHopeYouWillEnjoyPiwik": "We hope you will enjoy using Piwik as much as we enjoy making it.",
         "Welcome": "Welcome!",
         "WelcomeHelp": "<p>Piwik is a free/libre web analytics software that makes it easy to get the information you want from your visitors.<\/p><p>This process is split up into %s easy steps and will take around 5 minutes.<\/p>",
-        "WelcomeToCommunity": "Welcome to the Piwik community!"
+        "WelcomeToCommunity": "Welcome to the Piwik community!",
+        "CannotConnectToDb": "Cannot connect to the database",
+        "CannotConnectToDbResolvingExplanation": "This may be a temporary issue, try %1$srefreshing the page%2$s. If the problem persists please contact your Piwik administrator."
     },
     "LanguagesManager": {
         "AboutPiwikTranslations": "About Piwik translations",
