language update  refs #3430

--- a/lang/el.json
+++ b/lang/el.json
@@ -371,7 +371,7 @@
         "NoteItIsExpectedThatQueriesFail": "Σημείωση: αν εκτελέσετε χειροκίνητα αυτά τα ερωτήματα, αναμένετεαι ότι ορισμένα από αυτά θα αποτύχουν. Σε αυτή την περίπτωση, αγνοήστε τα σφάλματα και εκτελέσετε τα επόμενα στη σειρά.",
         "NotificationClickToUpdatePlugins": "Κάντε κλικ για να ενημερώσετε τώρα τα πρόσθετά σας:",
         "NotificationClickToUpdateThemes": "Κάντε κλικ για να ενημερώσετε τώρα τις θεματικές σας παραλλαγές:",
-        "NotificationSubjectAvailableCoreUpdate": "Νέα έκδοση Piwik %s υπάρχει διαθέσιμη",
+        "NotificationSubjectAvailableCoreUpdate": "Υπάρχει διαθέσιμη η νέα έκδοση του Piwik %s",
         "NotificationSubjectAvailablePluginUpdate": "Υπάρχουν ενημερώσεις για τα πρόσθετα του Piwik σας",
         "PiwikHasBeenSuccessfullyUpgraded": "Το Piwik αναβαθμίστηκε επιτυχώς!",
         "PiwikUpdatedSuccessfully": "Το Piwik αναβαθμίστηκε επιτυχώς!",
@@ -475,7 +475,7 @@
         "Add": "Προσθήκη",
         "AfterEntry": "μετά την είσοδο εδώ",
         "All": "Όλα",
-        "AllowPiwikArchivingToTriggerBrowser": "Επιτρέπετε η ενεργοποίηση της αρχειοθέτησης του Piwik όταν προβάλλονται αναφορές από τον φυλλομετρητή",
+        "AllowPiwikArchivingToTriggerBrowser": "Να επιτρέπεται η ενεργοποίηση της αρχειοθέτησης από το Piwik όταν προβάλλονται αναφορές από τον φυλλομετρητή",
         "AllWebsitesDashboard": "Κεντρικός πίνακας όλων των ιστοσελίδων",
         "And": "και",
         "API": "API",
