--- a/lang/it.json
+++ b/lang/it.json
@@ -66,10 +66,10 @@
         "AddAnnotationsFor": "Aggiungi note per %s...",
         "AnnotationOnDate": "Note su %1$s: %2$s",
         "Annotations": "Note",
-        "ClickToDelete": "Clicca qui per cancellare questa annotazione.",
-        "ClickToEdit": "Clicca qui per modificare questa annotazione.",
-        "ClickToEditOrAdd": "Clicca qui per modificare o aggiungere una nuova annotazione.",
-        "ClickToStarOrUnstar": "Click per segnare questa annotazione.",
+        "ClickToDelete": "Cancella questa annotazione.",
+        "ClickToEdit": "Modifica questa annotazione.",
+        "ClickToEditOrAdd": "Modifica o aggiungi una nuova annotazione.",
+        "ClickToStarOrUnstar": "Segna questa annotazione.",
         "CreateNewAnnotation": "Crea una nuova annotazione",
         "EnterAnnotationText": "Inserisci annotazione...",
         "HideAnnotationsFor": "Nascondi le note per %s...",
@@ -340,7 +340,7 @@
         "Websites": "Siti web"
     },
     "CoreUpdater": {
-        "ClickHereToViewSqlQueries": "Clicca qui per vedere e copiare la lista di query SQL che dovranno essere eseguite",
+        "ClickHereToViewSqlQueries": "Leggi e copia la lista di query SQL che dovranno essere eseguite",
         "CreatingBackupOfConfigurationFile": "Sto creando un backup del file di configurazione in %s",
         "CriticalErrorDuringTheUpgradeProcess": "Errore critico durante l'aggiornamento:",
         "DatabaseUpgradeRequired": "Aggiornamento del Database richiesto",
@@ -370,8 +370,8 @@
         "MajorUpdateWarning2": "Il seguente consiglio è particolarmente importante per le installazioni di grandi dimensioni.",
         "NoteForLargePiwikInstances": "Nota importante per grandi installazioni di Piwik",
         "NoteItIsExpectedThatQueriesFail": "Nota: se esegui manualmente queste query, puoi aspettarti che alcune di queste falliranno. In questo caso, semplicemente ignorale, ed esegui la successiva della lista.",
-        "NotificationClickToUpdatePlugins": "Clicca qui per aggiornare adesso i plugin:",
-        "NotificationClickToUpdateThemes": "Clicca qui per aggiornare adesso i temi:",
+        "NotificationClickToUpdatePlugins": "Aggiorna i tuoi plugin adesso:",
+        "NotificationClickToUpdateThemes": "Aggiorna i tuoi temi adesso:",
         "NotificationSubjectAvailableCoreUpdate": "Il Nuovo Piwik %s è disponibile",
         "NotificationSubjectAvailablePluginUpdate": "Aggiornamenti disponibili per i plugin di Piwik",
         "PiwikHasBeenSuccessfullyUpgraded": "Piwik è stato aggiornato con successo!",
@@ -498,7 +498,7 @@
         "ChooseLanguage": "Scegli la lingua",
         "ChoosePeriod": "Scegli il periodo",
         "ChooseWebsite": "Scegli il sito",
-        "ClickHere": "Clicca qui per più informazioni.",
+        "ClickHere": "Ottieni più informazioni.",
         "ClickToChangePeriod": "Clicca di nuovo per cambiare il periodo.",
         "Close": "Chiudi",
         "ColumnActionsPerVisit": "Azioni per visita",
@@ -1350,7 +1350,7 @@
         "ErrorNotLoading": "La sessione di Overlay Pagina non può ancora essere lanciata.",
         "ErrorNotLoadingDetails": "Forse la pagina caricata sulla destra non ha il codice tracking di Piwik. In questo caso prova ad avviare Overlay per una pagina diversa.",
         "ErrorNotLoadingDetailsSSL": "Dal momento che si sta utilizzando Piwik su HTTPS, la causa più probabile è che il vostro sito web non supporti SSL. Prova a utilizzare Piwik su HTTP.",
-        "ErrorNotLoadingLink": "Clicca qui per avere altri suggerimenti per dei problemi",
+        "ErrorNotLoadingLink": "Ottieni altri suggerimenti ai problemi",
         "Link": "Link",
         "Location": "Posizione",
         "NoData": "Non vi sono dati per questa pagina nel periodo selezionato",
@@ -1368,7 +1368,7 @@
         "AnonymizeIpMaskLengtDescription": "Seleziona quanti byte degli indirizzi IP dei visitatori devono essere nascosti.",
         "AnonymizeIpMaskLength": "%s byte - e.s. %s",
         "CannotLockSoDeleteLogActions": "La tabella log_action non verrà pulita: assicura il privilegio LOCK TABLES a '%s' utente MYSQL.",
-        "ClickHereSettings": "Clicca qui per accedere alle %s impostazioni.",
+        "ClickHereSettings": "Accedi alle impostazioni %s.",
         "CurrentDBSize": "Dimensione corrente del database",
         "DBPurged": "DB ripulito.",
         "DeleteBothConfirm": "Stai per consentire sia la cancellazione dei dati di log che la cancellazione dei dati dei report. Questo eliminerà in modo permanente la possibilità di visualizzare i vecchi dati di analisi. Sei sicuro di volerlo fare?",
@@ -2314,8 +2314,8 @@
         "ApplyToAllWebsites": "Applica a tutti i siti",
         "ChangeAllConfirm": "Sei sicuro di voler cambiare i permessi di '%s' in tutti i siti?",
         "ChangePasswordConfirm": "Il cambio password cambierà anche il token_auth dell'utente. Vuoi veramente continuare?",
-        "ClickHereToDeleteTheCookie": "Clicca qui per cancellare il cookie e fare di nuovo in modo che Piwik tracci le tue visite",
-        "ClickHereToSetTheCookieOnDomain": "Clicca qui per creare un cookie che farà escludere da Piwik le tue visite dai siti in cui hai installato Piwik %s",
+        "ClickHereToDeleteTheCookie": "Cancella il cookie affinché Piwik tracci nuovamente le tue visite",
+        "ClickHereToSetTheCookieOnDomain": "Crea un cookie che escluderà le tue visite dai siti monitorati con Piwik %s",
         "ConfirmGrantSuperUserAccess": "Vuoi veramente dare a '%s' l'accesso Super User? Attenzione: l'utente avrà accesso a tutti i siti web e potrà eseguire attività amministrative.",
         "ConfirmProhibitMySuperUserAccess": "%s, vuoi veramente rimuovere il tuo accesso Super User? Perderai tutti i permessi e l'accesso a tutti i siti web e verrai escluso da Piwik.",
         "ConfirmProhibitOtherUsersSuperUserAccess": "Vuoi veramente togliere l'accesso Super User a '%s'? L'utente perderà tutti i permessi e l'accesso a tutti i siti web. Assicurati di impostare, se necessario, i permessi in seguito.",
