--- a/lang/pl.json
+++ b/lang/pl.json
@@ -56,12 +56,15 @@
         "WidgetPagesEntry": "Strony wejściowe",
         "WidgetPagesExit": "Strony wyjściowe",
         "WidgetPageTitles": "Tytuły stron",
+        "WidgetPageTitlesFollowingSearch": "Tytuły Stron po Wyszukiwaniu Strony",
+        "WidgetPageUrlsFollowingSearch": "Strony Występujące po Wyszukiwaniu Stron",
         "WidgetSearchCategories": "Kategorie wyszukiwań",
         "WidgetSearchKeywords": "Słowa Kluczowe Wyszukiwarki",
         "WidgetSearchNoResultKeywords": "Słowa Kluczowe bez Wyników"
     },
     "Annotations": {
         "AddAnnotationsFor": "Dodaj adnotacje dla %s...",
+        "AnnotationOnDate": "Adnotacja do %1$s: %2$s",
         "Annotations": "Adnotacje",
         "ClickToDelete": "Kliknij aby usunąć tą adnotację.",
         "ClickToEdit": "Kliknij aby edytować tą adnotację.",
@@ -99,7 +102,9 @@
         "ClickHereToOptOut": "Kliknij tutaj by wyłączyć analizę.",
         "CustomLogoFeedbackInfo": "Jeśli dostosujesz logo Piwik, może będziesz także chciał ukryć %s odnośnik w górnym menu. Aby to zrobić możesz wyłączyć plugin Feedback na stronie %sManage Plugins%s.",
         "CustomLogoHelpText": "Można dostosować logo Piwik, które będą wyświetlane w interfejsie użytkownika i w raportach e-mail.",
+        "DevelopmentProcess": "Podczas gdy %sproces rozwoju%s składa się z tysięcy testów automatycznych, Beta Testerzy odgrywają kluczową rolę w osiągnięciu \"polityki braku błędów\" w Piwik'u.",
         "EmailServerSettings": "Konfiguracja serwera poczty",
+        "FaviconUpload": "Wybierz Favikonę do wysłania",
         "ForBetaTestersOnly": "Tylko dla beta testerów",
         "ImageTracking": "Obrazek Śledziący",
         "ImageTrackingIntro1": "Kiedy odwiedzający mają wyłączony język JavaScript lub kiedy JavaScript nie może być używany możesz użyć obrazka śledzącego aby śledzić odwiedzających.",
@@ -118,6 +123,7 @@
         "JSTracking_EnableDoNotTrack": "Włącz wykrywanie DoNotTrack u klienta",
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "NOTKA: Serwerowa opcja DoNotTrack została aktywowana, ustawienie które edytujesz nie będzie brane pod uwagę.",
         "JSTracking_EnableDoNotTrackDesc": "Więc żądania śledzenia nie będą wysyłane jeżeli odwiedzający nie życzą sobie śledzenia.",
+        "JSTracking_GroupPageTitlesByDomain": "Dodaj domenę do tytułu strony gdy śledzisz",
         "JSTracking_MergeSubdomains": "Śledź odwiedzających we wszystkich subdomenach",
         "JSTrackingIntro1": "Możesz śledzić odwiedzających na wiele sposobów. Rekomendowane jest użycie Javascript. By użyć tej metody musisz upewnić się, że każda podstrona ma kod, który możesz wygenerować poniżej.",
         "JSTrackingIntro2": "Kiedy już massz kod śledzenia JavaScript, skopiuj i wklej go na wszystkie strony, które chcesz śledzić w Piwik.",
@@ -135,7 +141,9 @@
         "OptOutForYourVisitors": "Wyłączenie działania Piwik dla twoich odwiedzających",
         "PiwikIsInstalledAt": "Piwik jest zainstalowany w",
         "PluginDescription": "Strefa administratora statystyk Piwik.",
+        "PluginSettingChangeNotAllowed": "Nie masz uprawnień do zmiany wartości parametru\"%s\" w pluginie \"%s\"",
         "PluginSettings": "Ustawienia pluginów",
+        "PluginSettingsValueNotAllowed": "Wartość dla pola \"%s\" w pluginie \"%s\" jest niedozwolona",
         "TrackAGoal": "Śledź cel",
         "TrackingCode": "Kod śledzenia",
         "UpdateSettings": "Zaktualizuj ustawienia",
