--- a/lang/en.json
+++ b/lang/en.json
@@ -609,7 +609,7 @@
         "EncryptedSmtpTransport": "Enter the transport layer encryption required by your SMTP server.",
         "EnglishLanguageName": "English",
         "Error": "Error",
-        "ErrorRequest": "Oops… problem during the request, please try again.",
+        "ErrorRequest": "Oops… there was a problem during the request. Maybe the server had a temporary issue, or maybe you requested a report with too much data. Please try again. If this error occurs repeatedly please %scontact your Piwik administrator%s for assistance.",
         "EvolutionOverPeriod": "Evolution over the period",
         "EvolutionSummaryGeneric": "%1$s in %2$s compared to %3$s in %4$s. Evolution: %5$s",
         "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "The user has to be either a Super User or the user '%s' itself.",
